--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link
       rel="stylesheet"
       media="screen and (max-width:768px)"
-      href="css/mobile.css"
+      href="./css/mobile.css"
     />
     <script
       src="https://kit.fontawesome.com/3bda59c9f1.js"
